# chronometre-py

./: .editorconfig  .gitignore  README.md  chronometre.cpp  main.py  pyproject.toml  pytest.ini  requirements.txt  setup.py
.github/workflows/: ci.yaml  publish.yaml
tests/unused/: pythonCtor.py
